--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -7,3 +7,9 @@ input[type=number]::-webkit-outer-spin-button {
 	-webkit-appearance: none;
 	margin: 0;
 }
+
+.block-style{
+	 padding: 3%;
+	 background-color: #f5f2f0;
+	 text-align: center;
+}
